# nebula-admin-panel

./: .gitignore  README.md
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/src/: main.rs
gui/: index.html  package.json
gui/src/: App.css  App.tsx  index.css
