[package]
name = "nebula-admin-panel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
tempfile = "3.3.0"
webhook = "2.1.1"
openssl-sys = "*"

[features]
vendored = ["openssl-sys/vendored"]